comment out boilerplate, add initial statements

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <h1>Similarize</h1>
         <p></p>
 
+        <h2>Ever wonder how many people agree with you?</h2>
+        <br>
+        <h2>Ever wonder if you could just explain yourself better, more people would agree with you?</h2>
+     
+
+<!--
         <p class="view"><a href="https://github.com/similarize/similarize">View the Project on GitHub <small>similarize/similarize</small></a></p>
 
 
@@ -66,6 +72,8 @@ $ git checkout gh-pages
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
+  
+-->
     
   </body>
 </html>
