add more words, reword

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Similarize by similarize</title>
+    <title>Similarize</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -20,8 +20,9 @@
 
         <h2>Ever wonder how many people agree with you?</h2>
         <br>
-        <h2>Ever wonder if you could just explain yourself better, more people would agree with you?</h2>
-     
+        <h2>Ever wonder how many more people would agree with you if you just worded things differently?</h2>
+        <br>
+        <h2>submit your persuasive argument in 300 characters or less: (link coming soon)</h2>
 
 <!--
         <p class="view"><a href="https://github.com/similarize/similarize">View the Project on GitHub <small>similarize/similarize</small></a></p>
