--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <br>
         <h2>Ever wonder how many more people would agree with you if you just worded things differently?</h2>
         <br>
-        <h2>submit your persuasive argument in 300 characters or less: (link coming soon)</h2>
+        <p>Submit your persuasive argument in 300 characters or less: (link coming soon)</p>
 
 <!--
         <p class="view"><a href="https://github.com/similarize/similarize">View the Project on GitHub <small>similarize/similarize</small></a></p>
