--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Similarize</h1>
+        <a href="http://similarize.com"><img src = "images/simlogo.png" width="250"  alt="simlarize"></a>
+      <h2 class="project-tagline"></h2>
         <p></p>
 
         <h2>Ever wonder how many people agree with you?</h2>
