change logo, add john taylor quote

--- a/index.html
+++ b/index.html
@@ -27,19 +27,26 @@
         <br>
         <p>Submit your persuasive argument in 300 characters or less: (link coming soon)</p>
 
-<!--
-        <p class="view"><a href="https://github.com/similarize/similarize">View the Project on GitHub <small>similarize/similarize</small></a></p>
+
+        <!--<p class="view"><a href="https://github.com/similarize/similarize">View the Project on GitHub <small>similarize/similarize</small></a></p>
 
 
         <ul>
           <li><a href="https://github.com/similarize/similarize/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/similarize/similarize/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/similarize/similarize">View On <strong>GitHub</strong></a></li>
-        </ul>
+        </ul>-->
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<br>
+<br>
+<br>
+<br>
+<br>
+          <p>"It is true intelligence for a man to take a subject that is mysterious and great in itself, and to unfold and simplify it so that a child can understand it." <div align="right">-John Taylor<div></p>
+
+<!--<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
@@ -76,8 +83,8 @@ $ git checkout gh-pages
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-  
--->
+  -->
+
     
   </body>
 </html>
