change text to say question or fact

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <br>
         <h2>Ever wonder how many more people would agree with you if you just worded things differently?</h2>
         <br>
-        <p>Submit your persuasive argument in 300 characters or less: (link coming soon)</p>
+        <p>Submit your question or fact in 300 characters or less: (link coming soon)</p>
 
 
         <!--<p class="view"><a href="https://github.com/similarize/similarize">View the Project on GitHub <small>similarize/similarize</small></a></p>
